--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -4,7 +4,7 @@ server {
     server_name  localhost;
 
     location / {
-        root   /usr/share/nginx/html;
+        root   /usr/share/nginx;
         index  index.html index.htm;
     }
 
@@ -14,6 +14,6 @@ server {
     #
     error_page   500 502 503 504  /50x.html;
     location = /50x.html {
-        root   /usr/share/nginx/html;
+        root   /usr/share/nginx;
     }
 }
